Split the version-independent half out into core/
Supporting 1.8.9 through 26.2 means four more ports, and copying the
preset, storage, share-code and apply logic into each of them would
guarantee the rules drift apart. So that half now lives in core/ with no
Minecraft imports at all, and each version supplies only what genuinely
differs: an adapter over its own keybind class, and its own screens.

The seam is BindHandle — id, current key, default key, set key — with keys
always in the canonical key.keyboard.* form. That matters more than it
looks: 1.13 onwards stores exactly that already, but 1.8.9 stores LWJGL2
integers, so the translation becomes that one adapter's problem instead of
leaking into the preset format.

core/ is plain Java 8 with Gson as its only dependency (verified by
compiling it standalone at --release 8), since the 1.8.9 build will need
that. Hence no records, no isBlank/strip, and a logging shim rather than
slf4j, which older versions don't ship.

Layout is versions/<mc>/ as separate self-contained Gradle builds rather
than subprojects: Loom can't have two versions of itself in one build, and
older Minecraft needs an older Loom. Each pulls core in as a source
directory, so it compiles into every jar with nothing to bundle or remap.

26.2 rebuilt and verified on the new structure, core classes confirmed
present in the remapped jar.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RtYt8dogGWRR22fgZTxpjJ